--- a/src/main/webapp/user_html/5_login.html
+++ b/src/main/webapp/user_html/5_login.html
@@ -1,32 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>注册/登录</title>
-    <style type="text/css" media="screen">
-        @import url("../user_css/5_login.css");
+    <link rel="stylesheet" href="user_css/bootstrap.css">
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 0 auto;
+            margin-top: 50px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin-top: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            width: 100%;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-<form>
-    <p>账号<br />
-        <input type="text" class="textinput" placeholder="请输入账号" />
-    </p>
-    <p>密码<br />
-        <input type="password" class="textinput" placeholder="请输入密码" />
-    </p>
-    <p>
-        <input id="remember" type="checkbox" /><label for="smtxt">记住密码</label>
-    </p>
-    <p>
-        <input type="submit" value="登录" /> <input type="button" name="Submit" onClick="location.href='1_homepage.html'" value="返回">
+<div class="container">
+    <h2>用户登录</h2>
+    <form id="loginForm" action="/PetPlatform_war_exploded/form_user_login">
+        <label for="userUsername">用户名:</label>
+        <input type="text" id="userUsername" name="userUsername" required>
 
-    </p>
-    <p class="smtxt">还没有账户？<a href="6_enroll.html">注册</a></a>
-    </p>
-    <p>
-        <input id="ad_login" type="button" value="管理员登录" onClick="location.href='../admin_html/0_ad_login.html'">
-    </p>
-</form>
+        <label for="userPassword">密码:</label>
+        <input type="password" id="userPassword" name="userPassword" required>
+
+        <input type="submit" value="登录">
+    </form>
+    <div class="footer">
+        还没有账号？<a href="6_register.html">点击这里注册</a>
+    </div>
+</div>
 </body>
 </html>
