增加一部分删改方法

--- a/src/main/webapp/user_html/2_team_show.html
+++ b/src/main/webapp/user_html/2_team_show.html
@@ -177,7 +177,7 @@
                     <div class="card">
                         <img src="path_to_photo2.jpg" class="card-img-top" alt="张洪鸣">
                         <div class="card-body">
-                            <h5 class="card-title">张洪鸣</h5>
+                            <h5 class="card-title">张洪铭</h5>
                             <p class="card-text">南京理工大学二年级学生，专注于后端开发。</p>
                         </div>
                     </div>
