--- a/src/main/webapp/user_html/4_pet_help.html
+++ b/src/main/webapp/user_html/4_pet_help.html
@@ -116,45 +116,35 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="task"  method="post">
+                <form action="/PetPlatform_war_exploded/form_user_task_add"  method="post">
                     <!-- 地点 -->
                     <div class="form-group">
                         <label for="taskSubject" class="form-label">救助对象</label>
                         <input type="text" class="form-control" id="taskSubject"  name="taskSubject" placeholder="请输入救助对象">
-                    </div>
-                    <!-- 地点 -->
-                    <div class="form-group">
-                        <label for="taskNumber" class="form-label">任务编号</label>
-                        <input type="number" class="form-control" id="taskNumber" name="taskNumber" placeholder="请输入任务编号">
-                    </div>
-                    <!-- 地点 -->
-                    <div class="form-group">
-                        <label for="captainNumber" class="form-label">领队编号</label>
-                        <input type="number" class="form-control" id="captainNumber" name="captainNumber" placeholder="请输入领队编号">
                     </div>
                     <!-- 时间 -->
                     <div class="form-group">
                         <label for="time" class="form-label">时间</label>
                         <input type="datetime-local" class="form-control" id="time" name="time">
                     </div>
-
                     <!-- 地点 -->
                     <div class="form-group">
                         <label for="taskLocation" class="form-label">任务地点</label>
                         <input type="text" class="form-control" id="taskLocation" name="taskLocation" placeholder="请输入地点">
                     </div>
-
                     <!-- 任务简述 -->
                     <div class="form-group">
                         <label for="taskDescription" class="form-label">任务描述</label>
-                        <textarea class="form-control" id="taskDescription" rows="3"></textarea>
+                        <textarea class="form-control" id="taskDescription" rows="3" name="taskDescription"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary">发布</button>
                     </div>
                 </form>
+
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary">发布</button>
-            </div>
+
         </div>
     </div>
 </div>
@@ -168,15 +158,11 @@
     </div>
 </header>
 
-<div class="div2">
-    <span class="alter">
-
-    </span>
-    <!--    <span class="alter">-->
-    <!--        <input type="button" onclick="location.href='4_pet_task.html'" value="浏览救助任务">-->
-    <!--    </span>-->
-</div>
 <h1 class="mb-4" style="text-align: center">救助任务信息列表</h1>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="margin-left:45%;">
+    <!-- 触发模态框的按钮 -->
+    发布救助任务
+</button>
 <table id="taskTable">
     <thead>
     <tr>
